[gd_scene load_steps=3 format=3 uid="uid://hd0qp5jqfkrx"]

[ext_resource type="Script" uid="uid://dwllcxuoxf3kl" path="res://control.gd" id="1_lti8b"]
[ext_resource type="Script" uid="uid://cy1onp4dv8iu2" path="res://menu.gd" id="1_ouk20"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_ouk20")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 35.0
offset_right = 40.0
offset_bottom = 75.0
script = ExtResource("1_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 108.0
offset_bottom = 66.0

[node name="IP" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
tooltip_text = "IP Address"
placeholder_text = "127.0.0.1"
max_length = 15
emoji_menu_enabled = false
virtual_keyboard_type = 3

[node name="Port" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
tooltip_text = "Port"
placeholder_text = "2010"
max_length = 5
emoji_menu_enabled = false
virtual_keyboard_type = 2

[node name="Server" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Start Server"

[node name="Client" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Join as Client"

[connection signal="text_changed" from="Control/VBoxContainer/IP" to="Control" method="_on_ip_text_changed"]
[connection signal="text_changed" from="Control/VBoxContainer/Port" to="Control" method="_on_port_text_changed"]
[connection signal="pressed" from="Control/VBoxContainer/Server" to="Control" method="_on_server_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Client" to="Control" method="_on_client_pressed"]
